--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     ]
   },
   "dependencies": {
+    "@alessiocancian/react-native-actionsheet": "^3.1.2",
     "@react-native-clipboard/clipboard": "^1.9.0",
     "@react-native-community/slider": "^4.1.12",
     "@react-navigation/drawer": "^6.1.8",
@@ -31,10 +32,17 @@
     "@react-navigation/stack": "^6.0.11",
     "eslint-plugin-react": "^7.27.1",
     "lodash.filter": "^4.6.0",
+    "lottie-react-native": "^5.0.1",
     "pretty": "^2.0.0",
     "react": "17.0.2",
-    "react-native": "0.66.3",
+    "react-native": "0.67.3",
+    "react-native-animated-splash-screen": "^2.0.5",
+    "react-native-awesome-modal": "^0.2.0",
     "react-native-gesture-handler": "^2.1.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal": "^13.0.0",
+    "react-native-navigation": "^7.25.4",
+    "react-native-safe-area": "^0.5.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-search-filter": "^0.1.5",
